[package]
name = "char22nm-preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.12.1"
liberty-db = { path="/home/HeLab/junzhuo/project/liberty/liberty-db"}
ordered-float = "4.2.0"
# liberty-db = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
